# kaboat2020backup

./: bashrczzzz
New/boat_nav/: CMakeLists.txt  package.xml
beginner_tutorials/: CMakeLists.txt  package.xml
car_control/: CMakeLists.txt  package.xml
car_control/src/: .car_control_node.cpp.swp  car_control_node.cpp
catkin_tools_prebuild/: CMakeCache.txt  Makefile
catkin_tools_prebuild/catkin_generated/: generate_cached_setup.py  setup_cached.sh
catkin_tools_prebuild/gtest/: Makefile
ebimu_odometry/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ebimu_odometry/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
ebimu_odometry/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
ebimu_odometry/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kbcontrol/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
kbcontrol/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
kbcontrol/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
kbcontrol/gtest/: CTestTestfile.cmake  Makefile  (+1 more)
learning_joy/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
led_control/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
nmea_navsat_driver/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ship_control_v1/: CMakeLists.txt  package.xml
ship_control_v1/launch/: control_node.launch
ship_control_v1/msg/: Ship_status_indicator.msg
ship_control_v1/src/: control_node.cpp  joy_to_twist.cpp
waypoint_follower/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
(+97 files in other folders)
